@@ -2,8 +2,8 @@
  *
  * CGIAUTH.C - Authorization utilities for Nagios CGIs
  *
- * Copyright (c) 1999-2004 Ethan Galstad (nagios@nagios.org)
- * Last Modified:   10-31-2004
+ * Copyright (c) 1999-2005 Ethan Galstad (nagios@nagios.org)
+ * Last Modified:   03-23-2005
  *
  * License:
  *
@@ -230,7 +230,7 @@ int is_authorized_for_host(host *hst, authdata *authinfo){
         }
 
 
-/* check if user is authorized to view information about AT LEAST ONE host in a particular hostgroup */
+/* check if user is authorized to view information about all hosts in a particular hostgroup */
 int is_authorized_for_hostgroup(hostgroup *hg, authdata *authinfo){
 	hostgroupmember *temp_hostgroupmember;
 	host *temp_host;
@@ -251,7 +251,7 @@ int is_authorized_for_hostgroup(hostgroup *hg, authdata *authinfo){
 
 
 
-/* check if user is authorized to view information about AT LEAST ONE service in a particular servicegroup */
+/* check if user is authorized to view information about all services in a particular servicegroup */
 int is_authorized_for_servicegroup(servicegroup *sg, authdata *authinfo){
 	servicegroupmember *temp_servicegroupmember;
 	service *temp_service;
